# flowcontrol

./: .gitignore  BACKEND_IMPLEMENTATION.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  coordinator.rs  lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/core/: mod.rs  protocol.rs  screen_layout.rs  state_machine.rs
src-tauri/src/engine/: SPEC.md  edge_detection.rs  fingerprint.rs  mod.rs  protocol.rs  screen_layout.rs  state_machine.rs
src-tauri/src/input/: SPEC.md  macos.rs  mod.rs  windows.rs
src-tauri/src/network/: SPEC.md  mod.rs
src/lib/: ArrangeDisplays.svelte  ConnectionStatus.svelte  Kbd.svelte  NavIcon.svelte  OSBadge.svelte  PeerCard.svelte  PeerCardSkeleton.svelte  Sidebar.svelte  StatusStrip.svelte
src/lib/onboarding/: Welcome.svelte
src/lib/pair/: PairRequestDialog.svelte
src/lib/pause/: PauseBanner.svelte
src/lib/screens/: Advanced.svelte  Shortcuts.svelte
src/lib/toast/: toastStore.svelte
svelte-port/: App.svelte  ArrangeDisplays.svelte  CHANGELOG.md  EmptyState.svelte  README.md  Sidebar.svelte  StatusDot.svelte  StatusStrip.svelte  app.css
svelte-port/onboarding/: Permissions.svelte
svelte-port/radar/: PeerRadar.svelte
svelte-port/screens/: About.svelte  Advanced.svelte
svelte-port/toast/: ToastLayer.svelte
